--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-spring.mvc.pathmatch.matching-strategy: ant_path_matcher
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
